authentication with nextAuth

--- a/.env
+++ b/.env
@@ -4,4 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:docker@127.0.0.1:3306/classmate"
+DATABASE_URL="mysql://root:docker@127.0.0.1:3306/classmate-db-1"
+
+GOOGLE_CLIENT_ID=858583839376-qljre1j0ke8dllob1cm9pfu6n93geqpl.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
+
+NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_SECRET='15102005guilhermepoladavimacaco'
