--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
+    "@next-auth/prisma-adapter": "^0.5.0",
     "@prisma/client": "^5.0.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
-    "next-auth": "^4.22.1",
+    "next": "^13.4.10",
+    "next-auth": "^4.22.3",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.26",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
