--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ GOOGLE_SECRET_ID=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
 
 NEXTAUTH_URL=http://localhost:3000/
 NEXTAUTH_SECRET='15102005guilhermepoladavimacaco'
+
+JWT_SECRET=23sdadjkw4fginwefnwefjkwefnjk
