--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
+    "@hookform/resolvers": "^3.2.0",
     "@next-auth/prisma-adapter": "^0.5.0",
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.32.0",
@@ -22,17 +25,25 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "exceljs": "^4.3.0",
+    "formidable": "^3.5.0",
+    "jsonwebtoken": "^9.0.1",
     "next": "^13.4.10",
     "next-auth": "^4.22.3",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.0.1",
+    "@types/formidable": "^3.4.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "prisma": "^5.0.0"
   }
 }
