--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@next-auth/prisma-adapter": "^0.5.0",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.32.0",
@@ -23,6 +22,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "exceljs": "^4.3.0",
@@ -35,14 +35,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.4.0",
     "@rocketseat/eslint-config": "^2.0.1",
     "@types/formidable": "^3.4.1",
     "@types/jsonwebtoken": "^9.0.2",
-    "prisma": "^5.0.0"
+    "prisma": "^5.0.0",
+    "prisma-erd-generator": "^1.11.1"
   }
 }
