--- a/package.json
+++ b/package.json
@@ -11,33 +11,34 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
     "@hookform/resolvers": "^3.2.0",
-    "@next-auth/prisma-adapter": "^0.5.0",
+    "@next-auth/prisma-adapter": "^0.5.4",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-select": "^1.2.2",
-    "@tanstack/react-query": "^4.32.0",
-    "@tanstack/react-query-devtools": "^4.32.0",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "^13.4.10",
     "exceljs": "^4.4.0",
     "jsonwebtoken": "^9.0.1",
-    "next": "^13.4.10",
-    "next-auth": "^4.22.3",
+    "next": "^13.5.6",
+    "next-auth": "^4.24.4",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
-    "postcss": "8.4.26",
+    "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
+    "sharp": "^0.32.6",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
