--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-toastify": "^9.1.3",
+    "react-use-draggable-scroll": "^0.4.7",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
@@ -46,6 +47,8 @@
     "@rocketseat/eslint-config": "^2.0.1",
     "@types/formidable": "^3.4.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "prisma": "^5.0.0"
   }
 }
