--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.10",
     "exceljs": "^4.4.0",
+    "html-to-image": "^1.11.11",
     "jsonwebtoken": "^9.0.1",
     "next": "^13.5.6",
     "next-auth": "^4.24.4",
